--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
-    --branco: #FFFFFF;
+    --cor-de-fundo: #023047;
+    --azul: #219ebc;
+    --azul: #ffffff;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
+    --texto-fundo: rgba(255, 255, 255, 0.3);
 }
 
 body {
@@ -59,3 +59,9 @@ body {
 .botoes {
     display: block;
 }
+
+@media screen and (min-width: 768px{
+    .botoes{
+        display: flex;
+}
+
